--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "homepage": "https://rzymek.github.io/bc/",
   "dependencies": {
+    "@types/jest": "^23.3.12",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "typescript": "^3.2.2"
   },
   "scripts": {
     "predeploy": "yarn run build",
