--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "homepage": "https://rzymek.github.io/bc/",
   "dependencies": {
     "@types/jest": "^23.3.12",
-    "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
-    "lodash": "^4.17.11",
+    "@types/shuffle-array": "^0.0.28",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
+    "shuffle-array": "^1.0.1",
     "typescript": "^3.2.2"
   },
   "scripts": {
